--- a/register_2.html
+++ b/register_2.html
@@ -11,42 +11,42 @@
 	</head>
 	<body style="background-color: #f2f2f2;width: 980px;margin: 0 auto;">
 
-	<div class="tophead" style="text-align: center;width: 475px;margin: 70px auto;margin-bottom: 40px;">
-		<a href="http://marketfy.com" style="text-decoration: none;font-family: Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #404040;font-size: 17px;font-weight: bold;"><img src="http://d36io9znxl3bhq.cloudfront.net/static/images/email/v2/logo.8dbd63b121b5.png"></a>
-		<a href="http://marketfy.com/page/about/" style="float: left;text-decoration: none;font-family: Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #404040;font-size: 17px;font-weight: bold;">About</a>
-		<a href="http://marketfy.com/product/webinars/" style="text-align: center;text-decoration: none;font-family: Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #404040;font-size: 17px;font-weight: bold;">Free Webinars</a>
-		<a href="http://blog.marketfy.com" style="float: right;text-decoration: none;font-family: Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #404040;font-size: 17px;font-weight: bold;">Blogs</a>
+	<div class="tophead" style="text-align: center;width: 375px;margin: 70px auto;margin-bottom: 40px;">
+		<a href="http://marketfy.com" style="text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #404040;font-size: 17px;font-weight: bold;"><img src="http://d36io9znxl3bhq.cloudfront.net/static/images/email/v2/logo.8dbd63b121b5.png" width="375px"></a>
+		<a href="http://marketfy.com/page/about/" style="float: left;text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #404040;font-size: 17px;font-weight: bold;">About</a>
+		<a href="http://marketfy.com/product/webinars/" style="text-align: center;text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #404040;font-size: 17px;font-weight: bold;">Free Webinars</a>
+		<a href="http://blog.marketfy.com" style="float: right;text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #404040;font-size: 17px;font-weight: bold;">Blogs</a>
 	</div>
 	<div class="bgwhite" style="background-color: #ffffff;width: 100%;height: 700px;">
-	<div class="text1" style="font-family: Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #404040;font-size: 58px;font-weight: bold;padding-left: 15px;padding-top: 10px;border-top: solid #ffffff;">How to use the Marketfy store</div>
-	<div class="text2" style="font-family: Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #1f4e79;font-size: 20px;padding-left: 15px;border-bottom: solid #dddddd;padding-bottom: 10px;">Use the store to find the perfect product for you.</div>
+	<div class="text1" style="font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #404040;font-size: 42px;font-weight: bold;padding-left: 15px;padding-top: 10px;border-top: solid #ffffff;">How to use the Marketfy store</div>
+	<div class="text2" style="font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #1f4e79;font-size: 20px;padding-left: 15px;border-bottom: solid #dddddd;padding-bottom: 10px;">Use the store to find the perfect product for you.</div>
 	<div class="boxs" style="width: 290px;height: 400px;float: left;background-color: #f2f2f2;margin: 20px 18px 30px;">
 		<div class="imgtop" style="text-align: center;margin-top: 10px;"><img src="http://d36io9znxl3bhq.cloudfront.net/static/images/email/v2/icon_search.f08a2c12a217.jpg"></div>
-		<div class="texttitle" style="font-family: Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #4a596e;font-size: 24px;text-align: center;font-weight: bold;">CHOOSE A PRODUCT TYPE</div>
-		<div class="textdesc" style="font-family: Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #4d4d4d;font-size: 20px;text-align: center;margin-top: 10px;">Each product on Marketfy provides a different benefit to you as a trader. Whether you're looking for education, trade alerts, chat rooms, or live trading rooms, Marketfy has you covered.
+		<div class="texttitle" style="font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #4a596e;font-size: 24px;text-align: center;font-weight: bold;">CHOOSE A PRODUCT TYPE</div>
+		<div class="textdesc" style="font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #4d4d4d;font-size: 20px;text-align: center;margin-top: 10px;">Each product on Marketfy provides a different benefit to you as a trader. Whether you're looking for education, trade alerts, chat rooms, or live trading rooms, Marketfy has you covered.
  </div>
 	</div>
 	<div class="boxs" style="width: 290px;height: 400px;float: left;background-color: #f2f2f2;margin: 20px 18px 30px;">
 		<div class="imgtop" style="text-align: center;margin-top: 10px;"><img src="http://d36io9znxl3bhq.cloudfront.net/static/images/email/v2/icon_mouse.2b1213efc468.jpg"></div>
-		<div class="texttitle" style="font-family: Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #4a596e;font-size: 24px;text-align: center;font-weight: bold;">SELECT ASSET CLASSES</div>
-		<div class="textdesc" style="font-family: Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #4d4d4d;font-size: 20px;text-align: center;margin-top: 10px;">Discover the products that will help you achieve your trading goals by filtering the Marketfy homepage by product type and asset class.
+		<div class="texttitle" style="font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #4a596e;font-size: 24px;text-align: center;font-weight: bold;">SELECT ASSET CLASSES</div>
+		<div class="textdesc" style="font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #4d4d4d;font-size: 20px;text-align: center;margin-top: 10px;">Discover the products that will help you achieve your trading goals by filtering the Marketfy homepage by product type and asset class.
  </div>
-		<div class="button1" style="background-image: url(http://d36io9znxl3bhq.cloudfront.net/static/images/email/v2/button1.e9d18c5a7c25.jpg);width: 200px;height: 50px;margin: 0 auto;margin-top: 30px;margin-bottom: 25px;text-align: center;font-size: 24px;color: #ffffff;line-height: 54px;font-family: Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;"><a href="http://marketfy.com/store/" style="padding: 10px 30px 10px 30px;text-decoration: none;color: #ffffff;">GET STARTED</a></div>
+		<div class="button1" style="background-color: #4a6785;width: 200px;height: 50px;margin: 0 auto;margin-top: 30px;margin-bottom: 25px;text-align: center;font-size: 24px;color: #ffffff;line-height: 54px;font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;"><a href="http://marketfy.com/store/" style="padding: 10px 30px 10px 30px;text-decoration: none;color: #ffffff;">GET STARTED</a></div>
 	</div>
 	<div class="boxs" style="width: 290px;height: 400px;float: left;background-color: #f2f2f2;margin: 20px 18px 30px;">
 		<div class="imgtop" style="text-align: center;margin-top: 10px;"><img src="http://d36io9znxl3bhq.cloudfront.net/static/images/email/v2/icon_map.0f419f28a0e3.jpg"></div>
-		<div class="texttitle" style="font-family: Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #4a596e;font-size: 24px;text-align: center;font-weight: bold;">EXPLORE THE PRODUCT</div>
-		<div class="textdesc" style="font-family: Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #4d4d4d;font-size: 20px;text-align: center;margin-top: 10px;">By exploring the product's dedicated overview page you can see the latest reviews, product feed, and the traders past performance.
+		<div class="texttitle" style="font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #4a596e;font-size: 24px;text-align: center;font-weight: bold;">EXPLORE THE PRODUCT</div>
+		<div class="textdesc" style="font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #4d4d4d;font-size: 20px;text-align: center;margin-top: 10px;">By exploring the product's dedicated overview page you can see the latest reviews, product feed, and the traders past performance.
 </div>
 	</div>
 	</div>
-	<div class="text3" style="font-family: Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #44546a;font-size: 17px;font-weight: bold;text-align: center;border-top: solid #ffffff;padding-top: 10px;clear: both;">Marketfy & Benzinga Partners</div>
+	<div class="text3" style="font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #44546a;font-size: 17px;font-weight: bold;text-align: center;border-top: solid #ffffff;padding-top: 10px;clear: both;">Marketfy & Benzinga Partners</div>
 	<div class="imagelogo" style="text-align: center;border-bottom: solid #ffffff;"><img src="http://d36io9znxl3bhq.cloudfront.net/static/images/email/v2/logo1.4080f71a951e.jpg"></div>
-	<div class="text4" style="text-align: center;font-family: Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #404040;font-size: 12px;font-weight: bold;padding-top: 10px;padding-bottom: 10px;">24471 West 10 Mile RoadSouthfield, Michigan 48067877.440.9464 | <a href="mailto:support@marketfy.com">Support@Marketfy.com</a>
+	<div class="text4" style="text-align: center;font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #404040;font-size: 7pt;font-weight: bold;padding-top: 10px;padding-bottom: 10px;">24471 West 10 Mile RoadSouthfield, Michigan 48067877.440.9464 | <a href="mailto:support@marketfy.com">Support@Marketfy.com</a>
         <br>
         <a href="http://marketfy.com/email/preferences/?email=&hash_code=&utm_medium=email&utm_campaign=register&utm_content=unsubscribe-link">Unsubscribe</a>
     </div>
-	<div class="footer" style="text-align: center;font-family: Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #ffffff;font-size: 18px;background-color: #6fa1cf;padding: 10px;border-top: solid #ffffff;">This article may include mentions of rumors, chatter, or unconfirmed information. Readers should beware that while unconfirmed information may be correlated with increased volatility in securities, price movements based on unofficial information may change quickly based on increased speculation, clarification, or release of official news. <br><br>
+	<div class="footer" style="text-align: center;font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #ffffff;font-size: 7pt;background-color: #6fa1cf;padding: 10px;border-top: solid #ffffff;">This article may include mentions of rumors, chatter, or unconfirmed information. Readers should beware that while unconfirmed information may be correlated with increased volatility in securities, price movements based on unofficial information may change quickly based on increased speculation, clarification, or release of official news. <br><br>
 
 Neither Benzinga nor its staff recommend that you buy, sell, or hold any security. We do not offer investment advice, personalized or otherwise. Benzinga recommends that you conduct your own due diligence and consult a certified financial professional for personalized advice about your financial situation.
 </div>
