--- a/register_4.html
+++ b/register_4.html
@@ -8,17 +8,17 @@
   </head>
   <body style="background-color: #f2f2f2;width: 980px;margin: 0 auto">
     
-    <div class="tophead" style="text-align: center;width: 475px;margin: 70px auto;margin-bottom: 40px">
-		<a href="#" style="text-decoration: none;font-family: Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #404040;font-size: 17px;font-weight: bold"><img src="http://d36io9znxl3bhq.cloudfront.net/static/images/email/v2/logo.8dbd63b121b5.png"/></a>
-		<a href="#" style="float: left;text-decoration: none;font-family: Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #404040;font-size: 17px;font-weight: bold">About</a>
-		<a href="#" style="text-align: center;text-decoration: none;font-family: Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #404040;font-size: 17px;font-weight: bold">Free Webinars</a>
-		<a href="#" style="float: right;text-decoration: none;font-family: Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #404040;font-size: 17px;font-weight: bold">Blogs</a>
+	<div class="tophead" style="text-align: center;width: 375px;margin: 70px auto;margin-bottom: 40px;">
+		<a href="http://marketfy.com" style="text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #404040;font-size: 17px;font-weight: bold;"><img src="http://d36io9znxl3bhq.cloudfront.net/static/images/email/v2/logo.8dbd63b121b5.png" width="375px"></a>
+		<a href="http://marketfy.com/page/about/" style="float: left;text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #404040;font-size: 17px;font-weight: bold;">About</a>
+		<a href="http://marketfy.com/product/webinars/" style="text-align: center;text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #404040;font-size: 17px;font-weight: bold;">Free Webinars</a>
+		<a href="http://blog.marketfy.com" style="float: right;text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #404040;font-size: 17px;font-weight: bold;">Blogs</a>
 	</div>
     <div class="leftfloat" style="background: white; float: left;width: 605px;height: 730px;border-top: solid #fff">
-		<div class="text1" style="font-family: Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #404040;font-size: 58px;font-weight: bold;padding-left: 15px;padding-top: 10px">Congratulations</div>
-		<div class="text2" style="font-family: Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #1f4e79;font-size: 20px;padding-left: 15px;border-bottom: solid thin #ddd;width: 80%;padding-bottom: 10px">You finished your first week on Marketfy.
+		<div class="text1" style="font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #404040;font-size: 42px;font-weight: bold;padding-left: 15px;padding-top: 10px">Congratulations</div>
+		<div class="text2" style="font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #1f4e79;font-size: 20px;padding-left: 15px;border-bottom: solid thin #ddd;width: 80%;padding-bottom: 10px">You finished your first week on Marketfy.
 </div>
-		<div class="text6" style="font-family: Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #686868;font-size: 20px;padding-left: 15px;padding-top: 10px;width: 80%">Hey ,
+		<div class="text6" style="font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #686868;font-size: 20px;padding-left: 15px;padding-top: 10px;width: 80%">Hey ,
 <br><br>
 How’s your first week on Marketfy been?<br><br>
 
@@ -42,25 +42,25 @@ The Marketfy Team<br>
 </div>
 	</div>
     <div class="rightfloat" style="float: right;width: 375px;height: 730px;background: url(http://d36io9znxl3bhq.cloudfront.net/static/images/email/v2/sidebar.5b65dfc34f64.jpg) no-repeat">
-		<div class="text7" style="font-family: Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #3f5066;font-size: 25px;font-weight: bold;text-align: center;margin-top: 60px">FOLLOW MARKETFY</div>
-		<div class="text8" style="font-family: Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #686868;font-size: 18px;font-weight: bold;text-align: center">Get all of the latest updates and event</div>
-		<div class="texttop" style="font-family: Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #686868;font-size: 18px;margin-left: 130px;margin-top: 15px">Like us on</div>
-		<div class="textbottom"><a href="#" style="font-family: Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #333f50;font-size: 20px;font-weight: bold;margin-left: 130px;text-decoration: none">FACEBOOK</a></div>
-		<div class="texttop" style="font-family: Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #686868;font-size: 18px;margin-left: 130px;margin-top: 15px">Follow us</div>
-		<div class="textbottom"><a href="http://twitter.com/marketfy" style="font-family: Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #333f50;font-size: 20px;font-weight: bold;margin-left: 130px;text-decoration: none">@Marketfy</a></div>
-		<div class="texttop" style="font-family: Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #686868;font-size: 18px;margin-left: 130px;margin-top: 15px">Subscribe on</div>
-		<div class="textbottom"><a href="#" style="font-family: Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #333f50;font-size: 20px;font-weight: bold;margin-left: 130px;text-decoration: none">Youtube</a></div>
-		<div class="texttop" style="font-family: Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #686868;font-size: 18px;margin-left: 130px;margin-top: 15px">Follow on</div>
-		<div class="textbottom"><a href="http://www.linkedin.com/company/marketfy" style="font-family: Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #333f50;font-size: 20px;font-weight: bold;margin-left: 130px;text-decoration: none">LinkedIn</a></div>
-		<div class="button1" style="background-color: #4cb342;width: 150px;height: 50px;margin-top: 315px;margin-left: 33px;text-align: center;font-size: 24px;color: #fff;line-height: 54px;font-family: Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif"><a href="#" style="padding: 10px 10px 10px 10px;text-decoration: none;color: #fff">Take a Look!</a></div>
+		<div class="text7" style="font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #3f5066;font-size: 25px;font-weight: bold;text-align: center;margin-top: 60px">FOLLOW MARKETFY</div>
+		<div class="text8" style="font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #686868;font-size: 18px;font-weight: bold;text-align: center">Get all of the latest updates and event</div>
+		<div class="texttop" style="font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #686868;font-size: 18px;margin-left: 130px;margin-top: 15px">Like us on</div>
+		<div class="textbottom"><a href="#" style="font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #333f50;font-size: 20px;font-weight: bold;margin-left: 130px;text-decoration: none">FACEBOOK</a></div>
+		<div class="texttop" style="font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #686868;font-size: 18px;margin-left: 130px;margin-top: 15px">Follow us</div>
+		<div class="textbottom"><a href="http://twitter.com/marketfy" style="font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #333f50;font-size: 20px;font-weight: bold;margin-left: 130px;text-decoration: none">@Marketfy</a></div>
+		<div class="texttop" style="font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #686868;font-size: 18px;margin-left: 130px;margin-top: 15px">Subscribe on</div>
+		<div class="textbottom"><a href="#" style="font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #333f50;font-size: 20px;font-weight: bold;margin-left: 130px;text-decoration: none">Youtube</a></div>
+		<div class="texttop" style="font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #686868;font-size: 18px;margin-left: 130px;margin-top: 15px">Follow on</div>
+		<div class="textbottom"><a href="http://www.linkedin.com/company/marketfy" style="font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #333f50;font-size: 20px;font-weight: bold;margin-left: 130px;text-decoration: none">LinkedIn</a></div>
+		<div class="button1" style="background-color: #4cb342;width: 150px;height: 50px;margin-top: 315px;margin-left: 33px;text-align: center;font-size: 24px;color: #fff;line-height: 54px;font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif"><a href="#" style="padding: 10px 10px 10px 10px;text-decoration: none;color: #fff">Take a Look!</a></div>
 	</div>
-    <div class="text3" style="font-family: Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #44546a;font-size: 17px;font-weight: bold;text-align: center;border-top: solid #fff;padding-top: 10px;clear: both">Marketfy &amp; Benzinga Partners</div>
+    <div class="text3" style="font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #44546a;font-size: 7pt;font-weight: bold;text-align: center;border-top: solid #fff;padding-top: 10px;clear: both">Marketfy &amp; Benzinga Partners</div>
     <div class="imagelogo" style="text-align: center;border-bottom: solid #fff">
       <img src="http://d36io9znxl3bhq.cloudfront.net/static/images/email/v2/logo1.4080f71a951e.jpg"/>
     </div>
-    <div class="text4" style="text-align: center;font-family: Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #404040;font-size: 12px;font-weight: bold;padding-top: 10px;padding-bottom: 10px">24471 West 10 Mile RoadSouthfield, Michigan 48067877.440.9464 | <a href="mailto:support@marketfy.com">Support@Marketfy.com</a>
+    <div class="text4" style="text-align: center;font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #404040;font-size: 7pt;font-weight: bold;padding-top: 10px;padding-bottom: 10px">24471 West 10 Mile RoadSouthfield, Michigan 48067877.440.9464 | <a href="mailto:support@marketfy.com">Support@Marketfy.com</a>
         <br>
         <a href="http://marketfy.com/email/preferences/?email=&hash_code=&utm_medium=email&utm_campaign=register&utm_content=unsubscribe-link">Unsubscribe</a></div>
-    <div class="footer" style="text-align: center;font-family: Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #fff;font-size: 23px;background-color: #6fa1cf;padding: 10px 0 10px 0;border-top: solid #fff">Disclaimers</div>
+    <div class="footer" style="text-align: center;font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #fff;font-size: 7pt;background-color: #6fa1cf;padding: 10px 0 10px 0;border-top: solid #fff">Disclaimers</div>
   <script type="text/javascript">if(!NREUMQ.f){NREUMQ.f=function(){NREUMQ.push(["load",new Date().getTime()]);var e=document.createElement("script");e.type="text/javascript";e.src=(("http:"===document.location.protocol)?"http:":"https:")+"//"+"js-agent.newrelic.com/nr-100.js";document.body.appendChild(e);if(NREUMQ.a)NREUMQ.a();};NREUMQ.a=window.onload;window.onload=NREUMQ.f;};NREUMQ.push(["nrfj","beacon-3.newrelic.com","4b9bf3ce27","2584410","MQEGMUUFD0JWVURcDghLIhBZBxVYWFgfWAQVFwUCUkoXWFJBQw8ECwUNCWgQBFxHWlFBBA==",0,15,new Date().getTime(),"","","","",""]);</script></body>
 </html>
