fix: Add some margin/padding around the address and unsubscribe link at the bottom.

--- a/register_1.html
+++ b/register_1.html
@@ -41,10 +41,12 @@
             width: 290px;
             height: 400px;
             float: left;
+            margin-left: auto;
+            margin-right: auto;
             background-color: #f2f2f2;
             margin: 20px 18px 30px;
         }
-    {
+    }
    </style> 
 	<div class="bgwhite" style="background-color: #ffffff;width: 100%; margin-bottom: 70px;">
 	<div class="text1" id="headtext" style="font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #404040; font-size: 58px; font-weight: bold;padding-left: 15px;padding-top: 10px;border-top: solid #ffffff;">Welcome to Marketfy.</div>
@@ -54,7 +56,7 @@
 		<div class="imgtop" style="text-align: center; margin: 10px auto 0 auto;"><img style="max-width: 100%;" style="max-width: 100%;" src="http://d36io9znxl3bhq.cloudfront.net/static/images/email/v2/icon_check.84aefc1ca1e0.jpg"></div>
 		<div class="texttitle" style="font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #4a596e;font-size: 20px;text-align: center;font-weight: bold;">COMPLETE YOUR PROFILE</div>
 		<div class="textdesc" style="font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #4d4d4d;font-size: 20px;text-align: center;margin-top: 10px;">Complete your profile so we can customize the products, webinars, & discounts we sent your way.
- </div>
+    </div>
 		<div class="button1" style="background-color: #4a6785;width: 200px;height: 50px;margin: 0 auto;margin-top: 80px;margin-bottom: 25px;text-align: center;font-size: 20px;color: #ffffff;line-height: 54px;font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;"><a href="http://marketfy.com/member/profile/" style="padding: 10px 30px 10px 30px;text-decoration: none;color: #ffffff;">GET STARTED</a></div>
 	</div>
 	<div class="boxs">
@@ -90,7 +92,7 @@
     <img src="http://d36io9znxl3bhq.cloudfront.net/static/images/email/v2/logo1.4080f71a951e.jpg" />
     </div>
     
-	<div class="text4" style="text-align: center; width: 100%; margin: 0 auto; display: block; font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif; color: #404040; font-size: 7pt; font-weight: bold;padding-top: 10px;padding-bottom: 10px;">24471 West 10 Mile RoadSouthfield, Michigan 48067877.440.9464 | <a href="mailto:support@marketfy.com">Support@Marketfy.com</a>
+  <div class="text4" style="text-align: center; width: 100%; margin: 25px auto; display: block; font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif; color: #404040; font-size: 7pt; font-weight: bold;padding-top: 10px;padding-bottom: 10px;">24471 West 10 Mile RoadSouthfield, Michigan 48067877.440.9464 | <a href="mailto:support@marketfy.com">Support@Marketfy.com</a>
         <br>
         <a href="http://marketfy.com/email/preferences/?email=&hash_code=&utm_medium=email&utm_campaign=register&utm_content=unsubscribe-link">Unsubscribe</a>
     </div>
