fix: image padding-top

--- a/register_2.html
+++ b/register_2.html
@@ -114,7 +114,7 @@
 							<td>				
 		
 	<div class="boxs2">
-		<div class="imgtop" style="text-align: center;margin-top: 10px;"><img src="http://d36io9znxl3bhq.cloudfront.net/static/images/email/v2/icon_search.f08a2c12a217.jpg"></div>
+		<div class="imgtop" style="text-align: center;margin-top: 10px;"><img style="padding-top: 15px;" src="http://d36io9znxl3bhq.cloudfront.net/static/images/email/v2/icon_search.f08a2c12a217.jpg"></div>
 		<div class="texttitle" style="font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #4a596e;font-size: 20px;text-align: center;font-weight: bold;">CHOOSE A PRODUCT TYPE</div>
 		<div class="textdesc" style="font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #4d4d4d;font-size: 20px;text-align: center;margin-top: 10px;">Each product on Marketfy provides a different benefit to you as a trader. Whether you're looking for education, trade alerts, chat rooms, or live trading rooms, Marketfy has you covered.
                 </div>     
@@ -129,7 +129,7 @@
 						<tr>
 							<td>				
 	<div class="boxs2">
-		<div class="imgtop" style="text-align: center;margin-top: 10px;"><img src="http://d36io9znxl3bhq.cloudfront.net/static/images/email/v2/icon_mouse.2b1213efc468.jpg"></div>
+		<div class="imgtop" style="text-align: center;margin-top: 10px;"><img style="padding-top: 15px;" src="http://d36io9znxl3bhq.cloudfront.net/static/images/email/v2/icon_mouse.2b1213efc468.jpg"></div>
 		<div class="texttitle" style="font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #4a596e;font-size: 20px;text-align: center;font-weight: bold;">SELECT ASSET CLASSES</div>
 		<div class="textdesc" style="font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #4d4d4d;font-size: 20px;text-align: center;margin-top: 10px;">Discover the products that will help you achieve your trading goals by filtering the Marketfy homepage by product type and asset class.
                 </div>
@@ -145,7 +145,7 @@
 						<tr>
 							<td>	
 	<div class="boxs2">
-		<div class="imgtop" style="text-align: center;margin-top: 10px;"><img src="http://d36io9znxl3bhq.cloudfront.net/static/images/email/v2/icon_map.0f419f28a0e3.jpg"></div>
+		<div class="imgtop" style="text-align: center;margin-top: 10px;"><img style="padding-top: 15px;" src="http://d36io9znxl3bhq.cloudfront.net/static/images/email/v2/icon_map.0f419f28a0e3.jpg"></div>
 		<div class="texttitle" style="font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #4a596e;font-size: 20px;text-align: center;font-weight: bold;">EXPLORE THE PRODUCT</div>
 		<div class="textdesc" style="font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #4d4d4d;font-size: 20px;text-align: center;margin-top: 10px;">By exploring the product's dedicated overview page you can see the latest reviews, product feed, and the traders past performance.
                 </div>
