--- a/register_1.html
+++ b/register_1.html
@@ -110,11 +110,11 @@
 							<td>				
 		
 	<div class="boxs2">
-		<div class="imgtop" style="text-align: center; margin: 10px auto 0 auto;"><img style="max-width: 100%;" style="max-width: 100%;" src="http://d36io9znxl3bhq.cloudfront.net/static/images/email/v2/icon_check.84aefc1ca1e0.jpg"></div>
+		<div class="imgtop" style="text-align: center; margin: 10px auto 0 auto;"><img style="max-width: 100%; padding-top: 15px;" style="max-width: 100%;" src="http://d36io9znxl3bhq.cloudfront.net/static/images/email/v2/icon_check.84aefc1ca1e0.jpg"></div>
 		<div class="texttitle" style="font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #4a596e;font-size: 20px;text-align: center;font-weight: bold;">COMPLETE YOUR PROFILE</div>
 		<div class="textdesc" style="font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #4d4d4d;font-size: 20px;text-align: center;margin-top: 10px;">Complete your profile so we can customize the products, webinars, & discounts we sent your way.
                 </div>
-		<div class="button1" style="background-color: #4a6785;width: 200px;height: 50px;margin: 0 auto;margin-top: 80px;margin-bottom: 25px;text-align: center;font-size: 20px;color: #ffffff;line-height: 54px;font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;"><a href="http://marketfy.com/member/profile/" style="padding: 10px 30px 10px 30px;text-decoration: none;color: #ffffff;">GET STARTED</a></div>
+		<div class="button1" style="background-color: #4a6785;width: 200px;height: 50px;margin: 0 auto;margin-top: 75px;margin-bottom: 25px;text-align: center;font-size: 20px;color: #ffffff;line-height: 54px;font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;"><a href="http://marketfy.com/member/profile/" style="padding: 10px 30px 10px 30px;text-decoration: none;color: #ffffff;">GET STARTED</a></div>
 	</div>
 							</td>
 						</tr>
@@ -126,11 +126,11 @@
 						<tr>
 							<td>				
 	<div class="boxs2">
-		<div class="imgtop" style="text-align: center;margin-top: 10px;"><img style="max-width: 100%;" src="http://d36io9znxl3bhq.cloudfront.net/static/images/email/v2/icon_map.0f419f28a0e3.jpg"></div>
+		<div class="imgtop" style="text-align: center;margin-top: 10px;"><img style="max-width: 100%; padding-top: 15px;" src="http://d36io9znxl3bhq.cloudfront.net/static/images/email/v2/icon_map.0f419f28a0e3.jpg"></div>
 		<div class="texttitle" style="font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #4a596e;font-size: 20px;text-align: center;font-weight: bold;">EXPLORE THE PRODUCTS</div>
 		<div class="textdesc" style="font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #4d4d4d;font-size: 20px;text-align: center;margin-top: 10px;">Discover the products that will help you achieve your trading goals by filtering the Marketfy homepage by product type and asset class.
  </div>
-		<div class="button1" style="background-color: #4a6785;width: 200px;height: 50px;margin: 0 auto;margin-top: 55px;margin-bottom: 25px;text-align: center;font-size: 20px;color: #ffffff;line-height: 54px;font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;"><a href="http://marketfy.com/store/" style="padding: 10px 30px 10px 30px;text-decoration: none;color: #ffffff;">GET STARTED</a></div>
+		<div class="button1" style="background-color: #4a6785;width: 200px;height: 50px;margin: 0 auto;margin-top: 50px;margin-bottom: 25px;text-align: center;font-size: 20px;color: #ffffff;line-height: 54px;font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;"><a href="http://marketfy.com/store/" style="padding: 10px 30px 10px 30px;text-decoration: none;color: #ffffff;">GET STARTED</a></div>
 	</div>
 							</td>
 						</tr>
@@ -147,7 +147,7 @@
      
 	
 	<div class="boxs2">
-		<div class="imgtop" style="text-align: center;margin-top: 10px;"><img style="max-width: 100%;" src="http://d36io9znxl3bhq.cloudfront.net/static/images/email/v2/icon_pc.a08fc5b045b0.jpg"></div>
+		<div class="imgtop" style="text-align: center;margin-top: 10px;"><img style="max-width: 100%; padding-top: 15px;" src="http://d36io9znxl3bhq.cloudfront.net/static/images/email/v2/icon_pc.a08fc5b045b0.jpg"></div>
 		<div class="texttitle" style="font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #4a596e;font-size: 20px;text-align: center;font-weight: bold;">STAY CONNECTED</div>
 		<div class="textdesc" style="font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #4d4d4d;font-size: 20px;text-align: center;margin-top: 10px;">Receive updates on new products, events & promotions by following us through social media.  Click on the icons below to get started...
 </div>
