--- a/register_1.html
+++ b/register_1.html
@@ -96,19 +96,19 @@
     </head>
 <body style="background-color: #f2f2f2; width: 100%; max-width: 980px; margin: 0 auto;">
         <div class="tophead" style="text-align: center; width: 100%;">
-		<a href="http://marketfy.com" style="text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #404040;font-size: 17px;font-weight: bold;">
-                <img src="http://d36io9znxl3bhq.cloudfront.net/static/images/email/v2/logo.8dbd63b121b5.png" style="max-width: 100%;"></a>
+		<a href="http://marketfy.com" style="text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #404040;font-size: 17px;font-weight: bold;">
+                <img src="http://naderion.eu/clientimagehost/logomarketfy.png" style="max-width: 100%;"></a>
 	</div>
-	<div class="tophead" style="text-align: center; width: 100%; max-width: 375px; margin: 0px auto 40px auto; padding: 0 10px;">    
-		<a href="http://marketfy.com/page/about/" style="float: left;text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #404040;font-size: 17px;font-weight: bold;">About</a>
-		<a href="http://marketfy.com/product/webinars/" style="text-align: center;text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #404040;font-size: 17px;font-weight: bold;">Free Webinars</a>
-		<a href="http://blog.marketfy.com" style="float: right;text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #404040;font-size: 17px;font-weight: bold;">Blogs</a>
+	<div class="tophead" style="text-align: center; width: 100%; max-width: 300px; margin: 0px auto 40px auto; padding: 0 10px;">    
+		<a href="http://marketfy.com/page/about/" style="float: left;text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #404040;font-size: 17px;">About</a>
+		<a href="http://marketfy.com/product/webinars/" style="text-align: center;text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #404040;font-size: 17px;">Free Webinars</a>
+		<a href="http://blog.marketfy.com" style="float: right;text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #404040;font-size: 17px;">Blog</a>
 	</div>
 	<div class="bgwhite" style="background-color: #ffffff;width: 100%; margin-bottom: 70px;">
-            <div class="text1" id="headtext" style="font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #404040; font-size: 58px; font-weight: bold;padding-left: 15px;padding-top: 10px;border-top: solid #ffffff;">
+            <div class="text1" id="headtext" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #404040; font-size: 58px; font-weight: bold;padding-left: 15px;padding-top: 10px;border-top: solid #ffffff;">
                 Welcome to Marketfy.
             </div>
-            <div class="text2" style="font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #1f4e79;font-size: 20px;padding-left: 15px;border-bottom: solid #dddddd;padding-bottom: 10px;">
+            <div class="text2" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #1f4e79;font-size: 20px;padding-left: 15px;border-bottom: solid #dddddd;padding-bottom: 10px;">
                 We are here to help you trade & invest better. Here's how you can get started:
             </div>
             <div class="column-wrap">
@@ -118,10 +118,10 @@
                             <td>
                                 <div class="boxs2">
                                     <div class="imgtop" style="text-align: center; margin: 10px auto 0 auto;"><img style="max-width: 100%; padding-top: 15px;" style="max-width: 100%;" src="http://d36io9znxl3bhq.cloudfront.net/static/images/email/v2/icon_check.84aefc1ca1e0.jpg"></div>
-                                    <div class="texttitle" style="font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #4a596e;font-size: 20px;text-align: center;font-weight: bold;">COMPLETE YOUR PROFILE</div>
-                                    <div class="textdesc" style="font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #4d4d4d;font-size: 20px;text-align: center;margin-top: 10px;">Complete your profile so we can customize the products, webinars, & discounts we sent your way.
+                                    <div class="texttitle" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #4a596e;font-size: 20px;text-align: center;font-weight: bold;">COMPLETE YOUR PROFILE</div>
+                                    <div class="textdesc" style=" padding: 2px 6px 2px 6px; font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #4d4d4d;font-size: 18px;text-align: center;margin-top: 10px;">Complete your profile so we can customize the products, webinars, & discounts we sent your way.
                                     </div>
-                                    <div class="button1" style="background-color: #4a6785;width: 200px;height: 50px;margin: 0 auto;margin-top: 75px;margin-bottom: 25px;text-align: center;font-size: 20px;color: #ffffff;line-height: 54px;font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;"><a href="http://marketfy.com/member/profile/" style="padding: 10px 30px 10px 30px;text-decoration: none;color: #ffffff;">GET STARTED</a></div>
+                                    <div class="button1" style="background-color: #4a6785;width: 200px;height: 50px;margin: 0 auto;margin-top: 75px;margin-bottom: 25px;text-align: center;font-size: 17px;color: #ffffff;line-height: 54px;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;"><a href="http://marketfy.com/member/profile/" style="padding: 10px 15px 10px 15px;text-decoration: none;color: #ffffff;">COMPLETE PROFILE</a></div>
                                 </div>
                             </td>
                         </tr>
@@ -133,10 +133,10 @@
                             <td>
                                 <div class="boxs2">
                                     <div class="imgtop" style="text-align: center;margin-top: 10px;"><img style="max-width: 100%; padding-top: 15px;" src="http://d36io9znxl3bhq.cloudfront.net/static/images/email/v2/icon_map.0f419f28a0e3.jpg"></div>
-                                    <div class="texttitle" style="font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #4a596e;font-size: 20px;text-align: center;font-weight: bold;">EXPLORE THE PRODUCTS</div>
-                                    <div class="textdesc" style="font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #4d4d4d;font-size: 20px;text-align: center;margin-top: 10px;">Discover the products that will help you achieve your trading goals by filtering the Marketfy homepage by product type and asset class.
+                                    <div class="texttitle" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #4a596e;font-size: 20px;text-align: center;font-weight: bold;">EXPLORE THE PRODUCTS</div>
+                                    <div class="textdesc" style=" padding: 2px 6px 2px 6px; font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #4d4d4d;font-size: 18px;text-align: center;margin-top: 10px;">Discover the products that will help you achieve your trading goals by filtering the Marketfy homepage by product type and asset class.
                                     </div>
-                                    <div class="button1" style="background-color: #4a6785;width: 200px;height: 50px;margin: 0 auto;margin-top: 50px;margin-bottom: 25px;text-align: center;font-size: 20px;color: #ffffff;line-height: 54px;font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;"><a href="http://marketfy.com/store/" style="padding: 10px 30px 10px 30px;text-decoration: none;color: #ffffff;">GET STARTED</a></div>
+                                    <div class="button1" style="background-color: #4a6785;width: 200px;height: 50px;margin: 0 auto;margin-top: 50px;margin-bottom: 25px;text-align: center;font-size: 17px;color: #ffffff;line-height: 54px;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;"><a href="http://marketfy.com/store/" style="padding: 10px 15px 10px 15px;text-decoration: none;color: #ffffff;">EXPLORE PRODUCTS</a></div>
                                 </div>
                             </td>
                         </tr>
@@ -148,10 +148,23 @@
                             <td>
                                 <div class="boxs2">
                                     <div class="imgtop" style="text-align: center;margin-top: 10px;"><img style="max-width: 100%; padding-top: 15px;" src="http://d36io9znxl3bhq.cloudfront.net/static/images/email/v2/icon_pc.a08fc5b045b0.jpg"></div>
-                                    <div class="texttitle" style="font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #4a596e;font-size: 20px;text-align: center;font-weight: bold;">STAY CONNECTED</div>
-                                    <div class="textdesc" style="font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #4d4d4d;font-size: 20px;text-align: center;margin-top: 10px;">Receive updates on new products, events & promotions by following us through social media.  Click on the icons below to get started...
+                                    <div class="texttitle" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #4a596e;font-size: 20px;text-align: center;font-weight: bold;">STAY CONNECTED</div>
+                                    <div class="textdesc" style=" padding: 2px 6px 2px 6px; font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #4d4d4d;font-size: 18px;text-align: center;margin-top: 10px;">Receive updates on new products, events & promotions by following us through social media.  Click on the icons below to get started...
                                     </div>
-                                    <div class="sosmed" style="text-align: center;"><a href="https://www.facebook.com/Marketfy"><img src="http://d36io9znxl3bhq.cloudfront.net/static/images/email/v2/ikonfb.2fd7f0746fe6.jpg" style="margin-left: 10px;margin-top: 10px;margin-bottom: -8px;"></a><a href="https://twitter.com/marketfy"><img src="http://d36io9znxl3bhq.cloudfront.net/static/images/email/v2/ikontwit.756356d8b47f.jpg" style="margin-left: 10px;margin-top: 10px;margin-bottom: -8px;"></a><a href="http://youtube.com/marketfy"><img src="http://d36io9znxl3bhq.cloudfront.net/static/images/email/v2/ikonyt.258a6bbffd0d.jpg" style="margin-left: 10px;margin-top: 10px;margin-bottom: -8px;"></a><a href="http://www.linkedin.com/company/marketfy"><img src="http://d36io9znxl3bhq.cloudfront.net/static/images/email/v2/ikonlin.7cebce453bff.jpg" style="margin-left: 10px;margin-top: 10px;margin-bottom: -8px;"></a></div>
+                                    <div class="sosmed" style="text-align: center; margin-top: 45px;margin-bottom: 25px;">
+                                        <a href="https://www.facebook.com/Marketfy">
+                                            <img src="http://d36io9znxl3bhq.cloudfront.net/static/images/email/v2/ikonfb.2fd7f0746fe6.jpg" style="margin-left: 10px;margin-top: 10px;margin-bottom: -8px;">
+                                        </a>
+                                        <a href="https://twitter.com/marketfy">
+                                            <img src="http://d36io9znxl3bhq.cloudfront.net/static/images/email/v2/ikontwit.756356d8b47f.jpg" style="margin-left: 10px;margin-top: 10px;margin-bottom: -8px;">
+                                        </a>
+                                        <a href="http://youtube.com/marketfy">
+                                            <img src="http://d36io9znxl3bhq.cloudfront.net/static/images/email/v2/ikonyt.258a6bbffd0d.jpg" style="margin-left: 10px;margin-top: 10px;margin-bottom: -8px;">
+                                        </a>
+                                        <a href="http://www.linkedin.com/company/marketfy">
+                                            <img src="http://d36io9znxl3bhq.cloudfront.net/static/images/email/v2/ikonlin.7cebce453bff.jpg" style="margin-left: 10px;margin-top: 10px;margin-bottom: -8px;">
+                                        </a>
+                                    </div>
                                 </div>
                             </td>
                         </tr>
@@ -163,16 +176,20 @@
         </div>
     <div style="clear: both;"></div>
     <div class="imagelogo" style="text-align: center; border-bottom: solid #ffffff; margin: 0 auto; width: 100%;">
-        <div class="text3" style="font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #44546a;font-size: 17px;font-weight: bold;text-align: center;border-top: solid #ffffff;padding-top: 10px;clear: both;">Marketfy & Benzinga Partners</div>
+        <div class="text3" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #44546a;font-size: 15px;font-weight: bold;text-align: center;border-top: solid #ffffff;padding-top: 10px;clear: both;">Marketfy & Benzinga Partners</div>
         <img src="http://d36io9znxl3bhq.cloudfront.net/static/images/email/v2/logo1.4080f71a951e.jpg" />
     </div>
-    <div class="text4" style="text-align: center; width: 100%; margin: 25px auto; display: block; font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif; color: #404040; font-size: 10pt; font-weight: bold;padding-top: 10px;padding-bottom: 10px;">24471 West 10 Mile RoadSouthfield, Michigan 48067877.440.9464 | <a href="mailto:support@marketfy.com">Support@Marketfy.com</a>
-        <br>
-        <a href="http://marketfy.com/email/preferences/?email=&hash_code=&utm_medium=email&utm_campaign=register&utm_content=unsubscribe-link">Unsubscribe</a>
+    <div class="text4" style="text-align: center; width: 100%; margin: 25px auto; display: block; font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif; color: #404040; font-size: 10pt; font-weight: bold;padding-top: 10px;padding-bottom: 10px;">
+        24471 West 10 Mile Road<br /> 
+        Southfield Michigan 48067<br />
+        877.440.9464 | <a href="mailto:support@marketfy.com">Support@Marketfy.com</a>
+        <br />
+        <a style="text-decoration: underline; color: #000000; font-size: 11pt;" href="http://marketfy.com/email/preferences/?email=&hash_code=&utm_medium=email&utm_campaign=register&utm_content=unsubscribe-link">Unsubscribe</a>
     </div>
-    <div class="footer" style="text-align: center;font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #ffffff;font-size: 7pt;background-color: #6fa1cf;padding: 10px;border-top: solid #ffffff;">
+    <div class="footer" style="text-align: center;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #ffffff;font-size: 7pt;background-color: #6fa1cf;padding: 10px;border-top: solid #ffffff;">
         This article may include mentions of rumors, chatter, or unconfirmed information. Readers should beware that while unconfirmed information may be correlated with increased volatility in securities, price movements based on unofficial information may change quickly based on increased speculation, clarification, or release of official news. <br><br>
         Neither Benzinga nor its staff recommend that you buy, sell, or hold any security. We do not offer investment advice, personalized or otherwise. Benzinga recommends that you conduct your own due diligence and consult a certified financial professional for personalized advice about your financial situation.
     </div>
-    <script type="text/javascript">if(!NREUMQ.f){NREUMQ.f=function(){NREUMQ.push(["load",new Date().getTime()]);var e=document.createElement("script");e.type="text/javascript";e.src=(("http:"===document.location.protocol)?"http:":"https:")+"//"+"js-agent.newrelic.com/nr-100.js";document.body.appendChild(e);if(NREUMQ.a)NREUMQ.a();};NREUMQ.a=window.onload;window.onload=NREUMQ.f;};NREUMQ.push(["nrfj","beacon-3.newrelic.com","4b9bf3ce27","2584410","MQEGMUUFD0JWVURcDghLIhBZBxVYWFgfWAQVFwUCUkoXWFJBQw8ECwUNCWgQBFxHWlFBBA==",0,25,new Date().getTime(),"","","","",""]);</script></body>
+    <script type="text/javascript">if(!NREUMQ.f){NREUMQ.f=function(){NREUMQ.push(["load",new Date().getTime()]);var e=document.createElement("script");e.type="text/javascript";e.src=(("http:"===document.location.protocol)?"http:":"https:")+"//"+"js-agent.newrelic.com/nr-100.js";document.body.appendChild(e);if(NREUMQ.a)NREUMQ.a();};NREUMQ.a=window.onload;window.onload=NREUMQ.f;};NREUMQ.push(["nrfj","beacon-3.newrelic.com","4b9bf3ce27","2584410","MQEGMUUFD0JWVURcDghLIhBZBxVYWFgfWAQVFwUCUkoXWFJBQw8ECwUNCWgQBFxHWlFBBA==",0,25,new Date().getTime(),"","","","",""]);</script>
+</body>
 </html>
