--- a/register_alt_4.html
+++ b/register_alt_4.html
@@ -88,34 +88,39 @@
 </head>
 <body style="background-color: #f2f2f2; width: 100%; max-width: 980px; margin: 0 auto;">
     <div class="tophead" style="text-align: center; width: 100%;">
-        <a href="http://marketfy.com" style="text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #404040;font-size: 17px;font-weight: bold;">
-            <img src="http://d36io9znxl3bhq.cloudfront.net/static/images/email/v2/logo.8dbd63b121b5.png" style="max-width: 100%;">
+        <a href="http://marketfy.com" style="text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #404040;font-size: 17px;font-weight: bold;">
+            <img src="http://naderion.eu/clientimagehost/logomarketfy.png" style="max-width: 100%;">
         </a>
     </div>
-    <div class="tophead" style="text-align: center; width: 100%; max-width: 375px; margin: 0px auto 40px auto; padding: 0 10px;">    
-        <a href="http://marketfy.com/page/about/" style="float: left;text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #404040;font-size: 17px;font-weight: bold;">About</a>
-        <a href="http://marketfy.com/product/webinars/" style="text-align: center;text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #404040;font-size: 17px;font-weight: bold;">Free Webinars</a>
-        <a href="http://blog.marketfy.com" style="float: right;text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #404040;font-size: 17px;font-weight: bold;">Blogs</a>
-    </div>
+	<div class="tophead" style="text-align: center; width: 100%; max-width: 300px; margin: 0px auto 40px auto; padding: 0 10px;">    
+		<a href="http://marketfy.com/page/about/" style="float: left;text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #404040;font-size: 17px;">About</a>
+		<a href="http://marketfy.com/product/webinars/" style="text-align: center;text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #404040;font-size: 17px;">Free Webinars</a>
+		<a href="http://blog.marketfy.com" style="float: right;text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #404040;font-size: 17px;">Blog</a>
+	</div>
     <div class="bgwhite" style="background-color: #ffffff;width: 100%; margin-bottom: 70px;">
-        <div class="text1" id="headtext" style="font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #404040; font-size: 58px; font-weight: bold;padding-left: 15px;padding-top: 10px;border-top: solid #ffffff;">Your Special Welcome Promotion...
+        <div class="text1" id="headtext" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #404040; font-size: 42px; font-weight: bold;padding-left: 15px;padding-top: 10px;border-top: solid #ffffff;">
+            Your Special Welcome Promotion…
         </div>
-        <div class="text2" style="font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #1f4e79;font-size: 20px;padding-left: 15px;border-bottom: solid #dddddd;padding-bottom: 10px;">
-            Hey,<br><br>
-            You’ve been on Marketfy for a week now – Success! <br><br>
-            Now that we have a better understanding of your trading style and interests, make sure to check out these products on Marketfy:<br>
-        </div>
+        <div class="text2" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #1f4e79;font-size: 20px;padding-left: 15px;padding-bottom: 10px;">
+           <br>
+          Hey [First Name],<br><br>
+          You’ve been on Marketfy for a week now – Success! <br><br>
+          Now that we have a better understanding of your trading style and interests, make sure to check out these products on Marketfy:
+</div>
         <div class="column-wrap">
             <div class="column">
                 <table align="left">
                     <tr>
                         <td>				
                             <div class="boxs2">
-                                <div class="imgtop" style="text-align: center;margin-top: 10px;"><img src="http://marketfy.com/image/6595c211ac5782bcb21535c3943e2034/268/155/"></div>
-                                <div class="texttitle" style="font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #4a596e;font-size: 20px;text-align: center;font-weight: bold;">OPTIONS EDUCATION</div>
-                                <div class="textdesc" style="font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #4d4d4d;font-size: 20px;text-align: center;margin-top: 10px;">Maximize your options trading for the most valuable commodity. Your time.
+                                <div class="texttitle" style="padding-top: 15px; font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #4a596e;font-size: 20px;text-align: center;font-weight: bold;">
+                                    OPTIONS EDUCATION
+                                     <hr style="max-width: 100%; background-color: #1f4e79; color:#1f4e79; border: 0px; height: 2px;">
                                 </div>
-                                <div class="button1" style="background-color: #4a6785;width: 200px;height: 50px;margin: 0 auto;margin-top: 30px;margin-bottom: 25px;text-align: center;font-size: 20px;color: #ffffff;line-height: 54px;font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;"><a href="http://marketfy.com/store/item/on-the-move/" style="padding: 10px 30px 10px 30px;text-decoration: none;color: #ffffff;">LEARN MORE</a></div>
+                                <div class="imgtop" style="text-align: center;margin-top: 10px;"><img src="http://marketfy.com/image/6595c211ac5782bcb21535c3943e2034/268/155/"></div>
+                                <div class="textdesc" style=" padding: 2px 6px 2px 6px; font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #4d4d4d;font-size: 18px;text-align: center;margin-top: 10px;">Maximize your options trading for the most valuable commodity: time.
+                                </div>
+                                <div class="button1" style="background-color: #4a6785;width: 200px;height: 50px;margin: 0 auto;margin-top: 30px;margin-bottom: 25px;text-align: center;font-size: 20px;color: #ffffff;line-height: 54px;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;"><a href="http://marketfy.com/store/item/on-the-move/" style="padding: 10px 30px 10px 30px;text-decoration: none;color: #ffffff;">LEARN MORE</a></div>
                             </div>
                         </td>
                     </tr>
@@ -126,11 +131,14 @@
                     <tr>
                         <td>				
                             <div class="boxs2">
-                                <div class="imgtop" style="text-align: center;margin-top: 10px;"><img src="http://marketfy.com/image/5d4fd284876a9cc877e7d1992d280ec7/268/155/"></div>
-                                <div class="texttitle" style="font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #4a596e;font-size: 20px;text-align: center;font-weight: bold;">EQUITIES CHATROOM</div>
-                                <div class="textdesc" style="font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #4d4d4d;font-size: 20px;text-align: center;margin-top: 10px;">Real-time stock chatroom with an expert trading professional.
+                                <div class="texttitle" style="padding-top: 15px; font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #4a596e;font-size: 20px;text-align: center;font-weight: bold;">
+                                    EQUITIES CHATROOM
+                                     <hr style="max-width: 100%; background-color: #1f4e79; color:#1f4e79; border: 0px; height: 2px;">
                                 </div>
-                                <div class="button1" style="background-color: #4a6785;width: 200px;height: 50px;margin: 0 auto;margin-top: 50px;margin-bottom: 25px;text-align: center;font-size: 20px;color: #ffffff;line-height: 54px;font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;"><a href="http://marketfy.com/store/item/stock-trader-chat-room/" style="padding: 10px 30px 10px 30px;text-decoration: none;color: #ffffff;">LEARN MORE</a></div>
+                                <div class="imgtop" style="text-align: center;margin-top: 10px;"><img src="http://marketfy.com/image/5d4fd284876a9cc877e7d1992d280ec7/268/155/"></div>
+                                <div class="textdesc" style=" padding: 2px 6px 2px 6px; font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #4d4d4d;font-size: 18px;text-align: center;margin-top: 10px;">Real-time stock chatroom with an expert trading professional.
+                                </div>
+                                <div class="button1" style="background-color: #4a6785;width: 200px;height: 50px;margin: 0 auto;margin-top: 50px;margin-bottom: 25px;text-align: center;font-size: 20px;color: #ffffff;line-height: 54px;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;"><a href="http://marketfy.com/store/item/stock-trader-chat-room/" style="padding: 10px 30px 10px 30px;text-decoration: none;color: #ffffff;">LEARN MORE</a></div>
                             </div>
                         </td>
                     </tr>
@@ -141,10 +149,13 @@
                     <tr>
                         <td>	
                             <div class="boxs2">
+                                <div class="texttitle" style="padding-top: 15px; font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #4a596e;font-size: 20px;text-align: center;font-weight: bold;">
+                                    ETF TRADE ALERTS
+                                     <hr style="max-width: 100%; background-color: #1f4e79; color:#1f4e79; border: 0px; height: 2px;">
+                                </div>
                                 <div class="imgtop" style="text-align: center;margin-top: 10px;"><img src="http://marketfy.com/image/9e1e65f57cc27f3096f6699828f51183/268/155/"></div>
-                                <div class="texttitle" style="font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #4a596e;font-size: 20px;text-align: center;font-weight: bold;">ETF TRADE ALERTS</div>
-                                <div class="textdesc" style="font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #4d4d4d;font-size: 20px;text-align: center;margin-top: 10px;">Beat the Market with ETF Trade Alerts & Professional Research
-                                    <div class="button1" style="background-color: #4a6785;width: 200px;height: 50px;margin: 0 auto;margin-top: 50px;margin-bottom: 25px;text-align: center;font-size: 20px;color: #ffffff;line-height: 54px;font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;"><a href="http://marketfy.com/store/item/etf-professor/" style="padding: 10px 30px 10px 30px;text-decoration: none;color: #ffffff;">LEARN MORE</a></div>
+                                <div class="textdesc" style=" padding: 2px 6px 2px 6px; font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #4d4d4d;font-size: 18px;text-align: center;margin-top: 10px;">Beat the Market with ETF Trade Alerts & Professional Research
+                                    <div class="button1" style="background-color: #4a6785;width: 200px;height: 50px;margin: 0 auto;margin-top: 50px;margin-bottom: 25px;text-align: center;font-size: 20px;color: #ffffff;line-height: 54px;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;"><a href="http://marketfy.com/store/item/etf-professor/" style="padding: 10px 30px 10px 30px;text-decoration: none;color: #ffffff;">LEARN MORE</a></div>
                                 </div>
                             </div>
                         </td>
@@ -155,28 +166,36 @@
         </div>     
         <div style="clear: both;"></div>
         <div style=" font-family: Arial; padding: 20px;">
-            <div style="text-align: center; color: #009400; font-weight: bold; margin: 20px 0;">
+            <div style="text-align: center; color: #5d5a5b; font-style:italic; font-size: 24px; font-weight: bold; margin: 20px 0; border-top: solid #dddddd; padding-top: 10px;">
                 Use coupon code, “FirstBuy” to save 15% off of your first purchase on Marketfy.
             </div>
-            <div>
-                So, what are you waiting for? Nic Chahine has generated over 20% this year alone!<br><br>
-                How much profit will you lose out before you join? <br><br>
-                Start trading with your recommended products by clicking the “learn more” buttons shown above.
+            <div style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #1f4e79;font-size: 20px;padding-left: 15px;border-bottom: solid #dddddd;padding-bottom: 10px;">
+                Ready to start learning the strategies that can help you maximize your profits? <br><br>
+                Click on one of the recommended products to get started.
+                <br><br>
+                Cheers,<br>
+                The Marketfy Team<br>
+                877.440.9464<br>            
             </div>
         </div>
         <div style="clear: both;"></div>
     </div>
     <div style="clear: both;"></div>
     <div class="imagelogo" style="text-align: center; border-bottom: solid #ffffff; margin: 0 auto; width: 100%;">
-        <div class="text3" style="font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #44546a;font-size: 17px;font-weight: bold;text-align: center;border-top: solid #ffffff;padding-top: 10px;clear: both;">Marketfy & Benzinga Partners</div>
+        <div class="text3" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #44546a;font-size: 15px;font-weight: bold;text-align: center;border-top: solid #ffffff;padding-top: 10px;clear: both;">Marketfy & Benzinga Partners</div>
         <img src="http://d36io9znxl3bhq.cloudfront.net/static/images/email/v2/logo1.4080f71a951e.jpg" />
     </div>
-    <div class="text4" style="text-align: center; width: 100%; margin: 25px auto; display: block; font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif; color: #404040; font-size: 10pt; font-weight: bold;padding-top: 10px;padding-bottom: 10px;">24471 West 10 Mile RoadSouthfield, Michigan 48067877.440.9464 | <a href="mailto:support@marketfy.com">Support@Marketfy.com</a>
-        <br>
-        <a href="http://marketfy.com/email/preferences/?email=&hash_code=&utm_medium=email&utm_campaign=register&utm_content=unsubscribe-link">Unsubscribe</a>
+    <div class="text4" style="text-align: center; width: 100%; margin: 25px auto; display: block; font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif; color: #404040; font-size: 10pt; font-weight: bold;padding-top: 10px;padding-bottom: 10px;">
+        24471 West 10 Mile Road<br /> 
+        Southfield Michigan 48067<br />
+        877.440.9464 | <a href="mailto:support@marketfy.com">Support@Marketfy.com</a>
+        <br />
+        <a style="text-decoration: underline; color: #000000; font-size: 11pt;" href="http://marketfy.com/email/preferences/?email=&hash_code=&utm_medium=email&utm_campaign=register&utm_content=unsubscribe-link">Unsubscribe</a>
     </div>
-    <div class="footer" style="text-align: center;font-family: Arial, Calibri, Candara, Segoe, &quot;Segoe UI&quot;, Optima, Arial, sans-serif;color: #ffffff;font-size: 7pt;background-color: #6fa1cf;padding: 10px;border-top: solid #ffffff;">This article may include mentions of rumors, chatter, or unconfirmed information. Readers should beware that while unconfirmed information may be correlated with increased volatility in securities, price movements based on unofficial information may change quickly based on increased speculation, clarification, or release of official news. <br><br>
+    <div class="footer" style="text-align: center;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #ffffff;font-size: 7pt;background-color: #6fa1cf;padding: 10px;border-top: solid #ffffff;">
+        This article may include mentions of rumors, chatter, or unconfirmed information. Readers should beware that while unconfirmed information may be correlated with increased volatility in securities, price movements based on unofficial information may change quickly based on increased speculation, clarification, or release of official news. <br><br>
         Neither Benzinga nor its staff recommend that you buy, sell, or hold any security. We do not offer investment advice, personalized or otherwise. Benzinga recommends that you conduct your own due diligence and consult a certified financial professional for personalized advice about your financial situation.
     </div>
-    <script type="text/javascript">if(!NREUMQ.f){NREUMQ.f=function(){NREUMQ.push(["load",new Date().getTime()]);var e=document.createElement("script");e.type="text/javascript";e.src=(("http:"===document.location.protocol)?"http:":"https:")+"//"+"js-agent.newrelic.com/nr-100.js";document.body.appendChild(e);if(NREUMQ.a)NREUMQ.a();};NREUMQ.a=window.onload;window.onload=NREUMQ.f;};NREUMQ.push(["nrfj","beacon-3.newrelic.com","4b9bf3ce27","2584410","MQEGMUUFD0JWVURcDghLIhBZBxVYWFgfWAQVFwUCUkoXWFJBQw8ECwUNCWgQBFxHWlFBBA==",0,25,new Date().getTime(),"","","","",""]);</script></body>
+    <script type="text/javascript">if(!NREUMQ.f){NREUMQ.f=function(){NREUMQ.push(["load",new Date().getTime()]);var e=document.createElement("script");e.type="text/javascript";e.src=(("http:"===document.location.protocol)?"http:":"https:")+"//"+"js-agent.newrelic.com/nr-100.js";document.body.appendChild(e);if(NREUMQ.a)NREUMQ.a();};NREUMQ.a=window.onload;window.onload=NREUMQ.f;};NREUMQ.push(["nrfj","beacon-3.newrelic.com","4b9bf3ce27","2584410","MQEGMUUFD0JWVURcDghLIhBZBxVYWFgfWAQVFwUCUkoXWFJBQw8ECwUNCWgQBFxHWlFBBA==",0,25,new Date().getTime(),"","","","",""]);</script>
+</body>
 </html>
