add: email_html (9-12)

--- a/register_1.html
+++ b/register_1.html
@@ -152,16 +152,16 @@
                                     <div class="textdesc" style=" padding: 2px 6px 2px 6px; font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #4d4d4d;font-size: 18px;text-align: center;margin-top: 10px;">Receive updates on new products, events & promotions by following us through social media.  Click on the icons below to get started...
                                     </div>
                                     <div class="sosmed" style="text-align: center; margin-top: 45px;margin-bottom: 25px;">
-                                        <a href="https://www.facebook.com/Marketfy">
+                                        <a style="text-decoration: none" href="https://www.facebook.com/Marketfy">
                                             <img src="http://d36io9znxl3bhq.cloudfront.net/static/images/email/v2/ikonfb.2fd7f0746fe6.jpg" style="margin-left: 10px;margin-top: 10px;margin-bottom: -8px;">
                                         </a>
-                                        <a href="https://twitter.com/marketfy">
+                                        <a style="text-decoration: none" href="https://twitter.com/marketfy">
                                             <img src="http://d36io9znxl3bhq.cloudfront.net/static/images/email/v2/ikontwit.756356d8b47f.jpg" style="margin-left: 10px;margin-top: 10px;margin-bottom: -8px;">
                                         </a>
-                                        <a href="http://youtube.com/marketfy">
+                                        <a style="text-decoration: none" href="http://youtube.com/marketfy">
                                             <img src="http://d36io9znxl3bhq.cloudfront.net/static/images/email/v2/ikonyt.258a6bbffd0d.jpg" style="margin-left: 10px;margin-top: 10px;margin-bottom: -8px;">
                                         </a>
-                                        <a href="http://www.linkedin.com/company/marketfy">
+                                        <a style="text-decoration: none" href="http://www.linkedin.com/company/marketfy">
                                             <img src="http://d36io9znxl3bhq.cloudfront.net/static/images/email/v2/ikonlin.7cebce453bff.jpg" style="margin-left: 10px;margin-top: 10px;margin-bottom: -8px;">
                                         </a>
                                     </div>
