--- a/register_1.html
+++ b/register_1.html
@@ -95,16 +95,19 @@
                 <title>Register Email</title>
     </head>
 <body style="background-color: #f2f2f2; width: 100%; max-width: 980px; margin: 0 auto;">
-        <div class="tophead" style="text-align: center; width: 100%;">
+        <div class="tophead" style="text-align: center;width: 100%; max-width: 400px;padding-bottom: 50px;float: left">
 		<a href="http://marketfy.com" style="text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #404040;font-size: 17px;font-weight: bold;">
-                <img src="http://naderion.eu/clientimagehost/logomarketfy.png" style="max-width: 100%;"></a>
-	</div>
-	<div class="tophead" style="text-align: center; width: 100%; max-width: 365px; margin: 0px auto 40px auto; padding: 0 10px;">    
-		<a href="http://marketfy.com/page/about/" style="float: left;text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #404040;font-size: 17px;">About</a>
-		<a href="http://marketfy.com/product/webinars/" style="text-align: center;text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #404040;font-size: 17px;">Free Webinars</a>
-		<a href="http://blog.marketfy.com" style="float: right;text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #404040;font-size: 17px;">Blog</a>
-	</div>
-	<div class="bgwhite" style="background-color: #ffffff;width: 100%; margin-bottom: 70px;">
+                <img src="http://naderion.eu/clientimagehost/logomarketfy.png" style="width: 100%;"></a>
+        </div>
+        <div class="tophead" style="text-align: center;width: 100%; max-width: 250px;padding-top: 20px;padding-bottom: 50px;float: right">
+                 <a href="http://blog.marketfy.com" style="float: right; padding: 5px; text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #333;font-size: 17px;">Blog</a>
+                 
+                 <a href="http://marketfy.com/product/webinars/" style="float: right; padding: 5px;text-align: center;text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #333;font-size: 17px;">Free Webinars | </a>
+                  
+                 <a href="http://marketfy.com/page/about/" style="float: right; padding: 5px; text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #333;font-size: 17px;">About  |</a>
+		
+        </div> <div style="clear: both;"></div>
+	<div class="bgwhite" style="background-color: #ffffff;width: 100%; margin-bottom: 20px;">
             <div class="text1" id="headtext" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #404040; font-size: 42px; font-weight: bold;padding-left: 15px;padding-top: 10px;border-top: solid #ffffff;">
                 Welcome to Marketfy.
             </div>
@@ -121,7 +124,7 @@
                                     <div class="texttitle" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #4a596e;font-size: 20px;text-align: center;font-weight: bold;">COMPLETE YOUR PROFILE</div>
                                     <div class="textdesc" style=" padding: 2px 6px 2px 6px; font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #4d4d4d;font-size: 18px;text-align: center;margin-top: 10px;">Complete your profile so we can customize the products, webinars, & discounts we sent your way.
                                     </div>
-                                    <div class="button1" style="background-color: #4a6785;width: 200px;height: 50px;margin: 0 auto;margin-top: 75px;margin-bottom: 25px;text-align: center;font-size: 17px;color: #ffffff;line-height: 54px;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;"><a href="http://marketfy.com/member/profile/" style="padding: 10px 15px 10px 15px;text-decoration: none;color: #ffffff;">COMPLETE PROFILE</a></div>
+                                    <div class="button1" style="background-color: #4a6785;width: 200px;height: 50px;margin: 0 auto;margin-top: 75px;margin-bottom: 25px;text-align: center;font-size: 17px;color: #ffffff;line-height: 54px;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;"><a href="http://marketfy.com/member/profile/" style="text-align: center;text-decoration: none;color: #ffffff;">COMPLETE PROFILE</a></div>
                                 </div>
                             </td>
                         </tr>
@@ -136,7 +139,7 @@
                                     <div class="texttitle" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #4a596e;font-size: 20px;text-align: center;font-weight: bold;">EXPLORE THE PRODUCTS</div>
                                     <div class="textdesc" style=" padding: 2px 6px 2px 6px; font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #4d4d4d;font-size: 18px;text-align: center;margin-top: 10px;">Discover the products that will help you achieve your trading goals by filtering the Marketfy homepage by product type and asset class.
                                     </div>
-                                    <div class="button1" style="background-color: #4a6785;width: 200px;height: 50px;margin: 0 auto;margin-top: 50px;margin-bottom: 25px;text-align: center;font-size: 17px;color: #ffffff;line-height: 54px;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;"><a href="http://marketfy.com/store/" style="padding: 10px 15px 10px 15px;text-decoration: none;color: #ffffff;">EXPLORE PRODUCTS</a></div>
+                                    <div class="button1" style="background-color: #4a6785;width: 200px;height: 50px;margin: 0 auto;margin-top: 50px;margin-bottom: 25px;text-align: center;font-size: 17px;color: #ffffff;line-height: 54px;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;"><a href="http://marketfy.com/store/" style="text-align: center;text-decoration: none;color: #ffffff;">EXPLORE PRODUCTS</a></div>
                                 </div>
                             </td>
                         </tr>
