--- a/register_alt_3.html
+++ b/register_alt_3.html
@@ -35,19 +35,18 @@
         <title>Register Email</title>
 </head>
 <body style="background-color: #f2f2f2; width: 100%; max-width: 980px; margin: 0 auto;">
-    <div class="tophead" style="text-align: center; width: 100%;">
-        <a href="http://marketfy.com" style="text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #404040;font-size: 17px;font-weight: bold;">
-            <img src="http://naderion.eu/clientimagehost/logomarketfy.png" style="max-width: 100%;">
-        </a>
-    </div>
-	<div class="tophead" style="text-align: center; width: 100%; max-width: 365px; margin: 0px auto 40px auto; padding: 0 10px;">    
-		<a href="http://marketfy.com/page/about/" style="float: left;text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #404040;font-size: 17px;">About</a>
-		<a href="http://marketfy.com/product/webinars/" style="text-align: center;text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #404040;font-size: 17px;">Free Webinars</a>
-		<a href="http://blog.marketfy.com" style="float: right;text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #404040;font-size: 17px;">Blog</a>
-	</div>
-    <div class="imagebig" style="text-align: center; background-color: #ffffff;">
-        <img src="http://d36io9znxl3bhq.cloudfront.net/static/images/email/v2/banner_advantage.b3785b5473a5.jpg" style="max-width: 100%;">
-    </div>
+  <div class="tophead" style="text-align: center;width: 100%; max-width: 400px;padding-bottom: 50px;float: left">
+		<a href="http://marketfy.com" style="text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #404040;font-size: 17px;font-weight: bold;">
+                <img src="http://naderion.eu/clientimagehost/logomarketfy.png" style="width: 100%;"></a>
+        </div>
+        <div class="tophead" style="text-align: center;width: 100%; max-width: 250px;padding-top: 20px;padding-bottom: 50px;float: right">
+                 <a href="http://blog.marketfy.com" style="float: right; padding: 5px; text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #333;font-size: 17px;">Blog</a>
+                 
+                 <a href="http://marketfy.com/product/webinars/" style="float: right; padding: 5px;text-align: center;text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #333;font-size: 17px;">Free Webinars | </a>
+                  
+                 <a href="http://marketfy.com/page/about/" style="float: right; padding: 5px; text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #333;font-size: 17px;">About  |</a>
+		
+        </div> <div style="clear: both;"></div>
     <div style="margin: 0 auto; width: 100%; background: #fff; padding-bottom: 20px;">
         <div class="text2" id="margtext" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #404040;font-size: 18px;font-weight: normal;text-align: center;padding-top: 45px; background: #fff; text-align: left;">
              <div style=" color: #4a6785; font-style:italic; font-size: 24px; font-weight: bold;"> Hey [First Name],</div><br>
